Fix line endings in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-qr",
-  "homepage": "https://habibanashat.github.io/react-q",
+  "homepage": "https://habibanashat.github.io/react-q/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
